Set up video recorder to work using Pipe instead of HDFVR. This is an initial proof of concept only. Current status: recorder shows up correctly formatted, w/o record button shown, in correct element; we can proceed from one frame to another without re-confirming settings; we can programmatically start and stop recording. (NOT YET: pause, wait for upload/allow overlapping recordings, warn if no audio, destroy recorder, display consent video to user, wait until recording is ready/started, edit troubleshooting directions, check video naming convention, security review.) Note that html5 is only used on secure origins, so for local development need to use https://localhost.

--- a/exp-player/addon/styles/addon.scss
+++ b/exp-player/addon/styles/addon.scss
@@ -95,3 +95,11 @@
     z-index: -1;
     position: absolute;
 }
+
+p#pipeClickPowered {
+    display:none;
+}
+
+#hdfvr-content, #hdfvr-content #pipeVrec, #hdfvr-content #pipeVideoInput {
+    height: 100% !important;
+}
